@@ -1,6 +1,3 @@
-# if 0
-# include <dejagnu.h>
-# endif
 # include <boost/test/unit_test.hpp>
 # include <openvrml/node.h>
 
@@ -141,132 +138,3 @@ boost::unit_test::test_suite * init_unit_test_suite(int, char * [])
     suite->add(BOOST_TEST_CASE(&find_exposedfield_matching_eventin));
     return suite;
 }
-
-
-# if 0
-TestState ts;
-
-int main()
-{
-    node_interface_set interfaces;
-    string test_desc;
-    bool succeeded;
-
-    {
-        test_desc = "insert an eventIn";
-
-        const node_interface interface(node_interface::eventin_id,
-                                       field_value::sfbool_id,
-                                       "set_zzz");
-        succeeded = interfaces.insert(interface).second;
-        if (succeeded) {
-            ts.pass(test_desc);
-        } else {
-            ts.fail(test_desc);
-        }
-    }
-
-    {
-        test_desc = "insert an exactly conflicting eventIn";
-
-        const node_interface interface(node_interface::eventin_id,
-                                       field_value::sfcolor_id,
-                                       "set_zzz");
-        succeeded = interfaces.insert(interface).second;
-        if (succeeded) {
-            ts.fail(test_desc);
-        } else {
-            ts.pass(test_desc);
-        }
-    }
-
-    {
-        test_desc = "insert a conflicting exposedField";
-
-        const node_interface interface(node_interface::exposedfield_id,
-                                       field_value::sfcolor_id,
-                                       "zzz");
-        succeeded = interfaces.insert(interface).second;
-        if (succeeded) {
-            ts.fail(test_desc);
-        } else {
-            ts.pass(test_desc);
-        }
-    }
-
-    {
-        test_desc = "insert an eventOut";
-
-        const node_interface interface(node_interface::eventout_id,
-                                       field_value::sfbool_id,
-                                       "zzz_changed");
-        succeeded = interfaces.insert(interface).second;
-        if (succeeded) {
-            ts.pass(test_desc);
-        } else {
-            ts.fail(test_desc);
-        }
-    }
-
-    {
-        test_desc = "insert an exactly conflicting eventOut";
-
-        const node_interface interface(node_interface::eventout_id,
-                                       field_value::sfcolor_id,
-                                       "zzz_changed");
-        succeeded = interfaces.insert(interface).second;
-        if (succeeded) {
-            ts.fail(test_desc);
-        } else {
-            ts.pass(test_desc);
-        }
-    }
-
-    {
-        test_desc = "insert a field";
-
-        const node_interface interface(node_interface::field_id,
-                                       field_value::sfint32_id,
-                                       "zzz");
-        succeeded = interfaces.insert(interface).second;
-        if (succeeded) {
-            ts.pass(test_desc);
-        } else {
-            ts.fail(test_desc);
-        }
-    }
-
-    {
-        test_desc = "insert an exposedfield";
-
-        const node_interface interface(node_interface::exposedfield_id,
-                                       field_value::sfrotation_id,
-                                       "yyy");
-        succeeded = interfaces.insert(interface).second;
-        if (succeeded) {
-            ts.pass(test_desc);
-        } else {
-            ts.fail(test_desc);
-        }
-    }
-
-    {
-        test_desc = "find an exposedField that matches an eventIn";
-
-        const node_interface interface(node_interface::eventin_id,
-                                       field_value::sfbool_id,
-                                       "set_yyy");
-
-        const node_interface_set::const_iterator pos =
-            interfaces.find(interface);
-
-        if (pos != interfaces.end()) {
-            ts.pass(test_desc);
-        } else {
-            ts.fail(test_desc);
-        }
-    }
-
-    return ::failed > 0 ? EXIT_FAILURE : EXIT_SUCCESS;
-}
-# endif
