@@ -1,3 +1,7 @@
+2005-05-17 Braden McDaniel  <braden@endoframe.com>
+
+	* tests/node_interface_set.cpp:  Removed DejaGnu cruft.
+
 2005-05-16 Braden McDaniel  <braden@endoframe.com>
 
 	Doc-comment fixes.
